from interfaces.agents.IInputManager import IInputManager

from interfaces.agents.IInputManager import IInputManager
from system.AgentState import AgentState


class InputManager:
    """
    A pure service class to handle input validation and initial sanitization.
    """

    def validate_input(self, user_input: str) -> str:
        """Simulates validation and cleaning of the user query."""
        if not user_input or len(user_input.strip()) < 5:
            return "Error: Query too short."

        validated_input = user_input.strip()
        print(f"[InputManager]: Input validated: '{validated_input[:40]}...'")
        return validated_input

# class InputManager:
#     def validate_input(self, state):
#         user_input = state["current_input"]
#         state["validated_input"] = {"validated": user_input}
#         return state
#
#     def augment_input(self, state):
#         user_input = state["current_input"]
#         state["augmented_input"] = {"augmented": user_input}
#         return state



