from interfaces.agents.IReflectionAgent import IReflectionAgent
from interfaces.agents.IPredictiveAgent import IPredictiveAgent

class ReflectionAgent(IReflectionAgent):
    def __init__(self, predictive_agent: IPredictiveAgent = None):
        self.predictive_agent = predictive_agent

    def review_output(self, output: dict) -> dict:
        # Minimal placeholder logic
        return output

    def check_consistency(self, output: dict) -> bool:
        return True

    def safety_filter(self, output: dict) -> dict:
        return output
